--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="text-container">
-        <p>Acest portofoliu este in versiunea beta.</p>
+        <p>Acest portofoliu este in versiunea beta...</p>
     </div>
 
 
