--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>clicker game</title>
     <link rel="stylesheet" href="style.css">
-    <title>BETA - PORTOFOLIO</title>
 </head>
 <body>
     
-    <div class="text-container">
-        <p>Acest portofoliu este in versiunea beta...</p>
+
+    <div id="div1">
+    <button id="btn">one click</button>
+
+    <button id="doubleclick">multiply by two</button>
+
+    <button id="tripleclick">multiply by three</button>
+    </div>
+
+    <div id="div2">
+    <h1 id="totalclicks">clicks: 0</h1>
+    </div>  
+
+
+    <div id="div3">
+        <button id="reset">reset clicks</button>
     </div>
 
 
     <script src="index.js"></script>
+
 </body>
 </html>
