--- a/index.html
+++ b/index.html
@@ -3,31 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>clicker game</title>
+    <title>devrusuu - portofolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 
-    <div id="div1">
-    <button id="btn">one click</button>
-
-    <button id="doubleclick">multiply by two</button>
-
-    <button id="tripleclick">multiply by three</button>
-    </div>
-
-    <div id="div2">
-    <h1 id="totalclicks">clicks: 0</h1>
-    </div>  
-
-
-    <div id="div3">
-        <button id="reset">reset clicks</button>
-    </div>
-
+    <p id="p">This portofolio isn't ready yet.</p>
+    <a href="index2.html" id="firstproject">First project (Click)</a>
 
     <script src="index.js"></script>
-
 </body>
 </html>
